Working container handling and split up between container and database specific implementationt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "python.testing.pytestArgs": [
+        "docker_db"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.analysis.extraPaths": [
-        "./backend/src", "./backend/"
+        "./docker_db/src", "./docker_db/"
     ],
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "eeyore.yapf",
