--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,6 +32,7 @@ jobs:
           python3 -m venv venv
           . venv/bin/activate
           pip install --no-cache-dir -r requirements.txt
+          pip install --no-cache-dir -r etc/dev_requirements.txt
 
       - name: Run Pytest with Docker SDK
         run: pytest tests/test_mongodb.py
