--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,11 +31,12 @@ jobs:
         run: |
           python3 -m venv venv
           . venv/bin/activate
-          pip install --no-cache-dir -r requirements.txt
-          pip install --no-cache-dir -r etc/dev_requirements.txt
+          pip install --no-cache-dir -r requirements.txt -r etc/dev_requirements.txt
 
       - name: Run Pytest with Docker SDK
-        run: pytest tests/test_mongodb.py
+        run: |
+          . venv/bin/activate
+          pytest tests/test_mongodb.py
 
       - name: Run Pytest with Docker SDK
         run: pytest tests/test_mssql.py
