attempting creation of the mount dir

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,38 +3,49 @@ name: Docker Outside Docker Tests
 on: [push, pull_request]
 
 jobs:
-  test:
+  docker-outside-docker:
     runs-on: ubuntu-latest
 
     container:
-      image: python:3.10
-      options: --user root  # needed if you need to install deps
-
-    services:
-      docker:
-        image: docker:dind
-        options: --privileged
-        ports:
-          - 2375:2375
-
-    env:
-      DOCKER_HOST: tcp://docker:2375
+      image: docker:dind
+      options: --privileged
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Install pip deps
+      - name: Install system dependencies
         run: |
-          apt-get update && apt-get install -y python3-pip python3-venv
+          apk update && apk add --no-cache \
+            python3 \
+            py3-pip \
+            python3-dev \
+            build-base \
+            g++ \
+            musl-dev \
+            unixodbc-dev \
+            libffi-dev \
+            openssl-dev
+
+      - name: Create and activate virtualenv, install deps
+        run: |
           python3 -m venv venv
           . venv/bin/activate
-          pip install -r requirements.txt -r etc/dev_requirements.txt
-
-      - name: Create mount dir
+          pip install --no-cache-dir -r requirements.txt -r etc/dev_requirements.txt
+          
+      - name: Prepare mount dir
         run: mkdir -p tests/data/tmp/mgdata
 
-      - name: Run tests (containers will be children of DinD)
+      - name: Run Pytest with Docker SDK
         run: |
           . venv/bin/activate
           pytest tests/test_mongodb.py
 
+      - name: Run Pytest with Docker SDK
+        run: pytest tests/test_mssql.py
+
+      - name: Run Pytest with Docker SDK
+        run: pytest tests/test_postgres.py
+
+      - name: Run Pytest with Docker SDK
+        run: pytest tests/test_mysql.py
