--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          apt-get update && apt-get add --no-cache \
+          apt-get update && apt-get install \
             python3 \
             py3-pip \
             python3-dev \
