--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           apt-get update && apt-get install -y \
             python3 \
+            python3.12-venv \
             python3-pip \
             python3-dev \
             build-essential \
