--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,59 +1,51 @@
-name: Docker Outside Docker Tests
+name: Docker-in-Docker Tests
 
 on: [push, pull_request]
 
 jobs:
-  docker-outside-docker:
+  docker-tests:
     runs-on: ubuntu-latest
-    
-    services:
-      docker:
-        image: docker:dind
-        options: --privileged --shm-size=2g
-        volumes:
-          - /var/run/docker.sock:/var/run/docker.sock:ro
 
     container:
-      image: ubuntu:latest
+      image: docker:24.0.5-dind
+      options: --privileged  # Required for Docker daemon
+
+    services:
+      docker:
+        image: docker:24.0.5-dind
+        options: --privileged --shm-size=2g
 
     steps:
+      - name: Install dependencies
+        run: |
+          apk add --no-cache \
+            python3 \
+            py3-pip \
+            py3-virtualenv \
+            git \
+            build-base \
+            curl
+
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install system dependencies
-        run: |
-          apt-get update && apt-get install -y \
-            python3 \
-            python3.12-venv \
-            python3-pip \
-            python3-dev \
-            build-essential \
-            g++ \
-            unixodbc-dev \
-            libffi-dev \
-            libssl-dev \
-            curl \
-            git 
-
-      - name: Create and activate virtualenv, install deps
+      - name: Set up virtualenv
         run: |
           python3 -m venv venv
           . venv/bin/activate
-          pip install --no-cache-dir -r requirements.txt -r etc/dev_requirements.txt
-          
-      - name: Prepare mount dir
-        run: mkdir -p tests/data/tmp/mgdata
+          pip install -r requirements.txt -r etc/dev_requirements.txt
 
-      - name: Run Pytest with Docker SDK
+      - name: Prepare mount dir
+        run: mkdir -p /data/tmp/mgdata
+
+      - name: Start Docker daemon
+        run: |
+          dockerd-entrypoint.sh &
+
+          # Wait for daemon to be ready
+          timeout 30 sh -c 'until docker info; do sleep 1; done'
+
+      - name: Run Pytest (Docker SDK)
         run: |
           . venv/bin/activate
           pytest tests/test_mongodb.py
-
-      - name: Run Pytest with Docker SDK
-        run: pytest tests/test_mssql.py
-
-      - name: Run Pytest with Docker SDK
-        run: pytest tests/test_postgres.py
-
-      - name: Run Pytest with Docker SDK
-        run: pytest tests/test_mysql.py
