--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "./src", 
     ],
     "editor.formatOnSave": true,
+    "editor.formatOnType": false,
     "editor.defaultFormatter": "eeyore.yapf",
     "diffEditor.maxFileSize": 0,
     "diffEditor.maxComputationTime": 0,
