--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,4 +38,4 @@ jobs:
         run: |
           docker run --rm \
             -v workspace_vol:/app \
-            my-custom-image sh -c "echo 'Inside container'; ls -la /app"
+            my-custom-image sh -c "echo 'Inside container'; pytest -v tests/test_postgres.py"
