--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,1 +1,18 @@
-FROM alpine:latest
+FROM ubuntu:latest
+
+COPY . /app
+WORKDIR /app
+
+RUN apt-get update && apt-get install -y \
+        python3 \
+        python3-pip \
+        python3-venv \
+        git \
+        curl
+
+# Create and activate virtual environment
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Install packages in virtual environment
+RUN python3 -m pip install --upgrade pip && python3 -m pip install .
