--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,17 +22,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Login to GitHub Container Registry
-      - name: Log in to GitHub Container Registry
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      # Add Docker Buildx for advanced build features
-      - name: Set up Docker Buildx
-        run: |
-          docker buildx create --use --name builder --driver docker-container
-          docker buildx inspect --bootstrap
-
       - name: Create workspace volume
         run: |
           docker volume create workspace_vol
@@ -41,15 +30,16 @@ jobs:
             -v ${{ github.workspace }}:/tmp/workspace_src \
             alpine cp -a /tmp/workspace_src/. /workspace/
 
-      - name: Build Docker Image with registry caching
+      # Simple approach: Pull previous image for layer caching
+      - name: Pull previous image for caching
         run: |
-          # Convert repository name to lowercase for registry
-          REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          
-          docker buildx build \
-            --cache-from=type=registry,ref=ghcr.io/${REPO_NAME}/cache:buildcache \
-            --cache-to=type=registry,ref=ghcr.io/${REPO_NAME}/cache:buildcache,mode=max \
-            --load \
+          docker pull my-custom-image:latest || true
+
+      - name: Build Docker Image with simple caching
+        run: |
+          docker build \
+            --cache-from my-custom-image:latest \
+            -t my-custom-image:latest \
             -t my-custom-image \
             -f docker/Dockerfile.test \
             .
