Attempting to run with dockerhubg

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Docker-in-Docker with Workspace Volume
+name: Docker Build and Test with DockerHub Caching
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  docker-build-and-run:
+  docker-build-and-test:
     runs-on: ubuntu-latest
 
     container:
@@ -22,6 +22,31 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        run: |
+          docker buildx create --use --name builder --driver docker-container --bootstrap
+
+      # Login to DockerHub
+      - name: Login to DockerHub
+        run: |
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      # Build with DockerHub registry cache
+      - name: Build Docker image with DockerHub caching
+        run: |
+          # Replace 'your-username' with your actual DockerHub username
+          DOCKERHUB_USER="${{ secrets.DOCKERHUB_USERNAME }}"
+          CACHE_REF="${DOCKERHUB_USER}/buildcache:${{ github.repository_owner }}-$(echo ${{ github.repository }} | cut -d'/' -f2)"
+          
+          docker buildx build \
+            --cache-from=type=registry,ref=${CACHE_REF} \
+            --cache-to=type=registry,ref=${CACHE_REF},mode=max \
+            --load \
+            -t my-custom-image \
+            -f docker/Dockerfile.test \
+            .
+
       - name: Create workspace volume
         run: |
           docker volume create workspace_vol
@@ -29,23 +54,10 @@ jobs:
             -v workspace_vol:/workspace \
             -v ${{ github.workspace }}:/tmp/workspace_src \
             alpine cp -a /tmp/workspace_src/. /workspace/
-
-      # Simple approach: Pull previous image for layer caching
-      - name: Pull previous image for caching
-        run: |
-          docker pull my-custom-image:latest || true
-
-      - name: Build Docker Image with simple caching
-        run: |
-          docker build \
-            --cache-from my-custom-image:latest \
-            -t my-custom-image:latest \
-            -t my-custom-image \
-            -f docker/Dockerfile.test \
-            .
           
-      - name: Run Container using workspace volume
+      - name: Run tests in container
         run: |
           docker run --rm \
             -v workspace_vol:/app \
-            my-custom-image sh -c "echo 'Inside container'; pytest -v tests/test_postgres.py"
+            my-custom-image \
+            sh -c "echo 'Inside container'; pytest -v tests/test_postgres.py"
