--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,15 +14,20 @@ jobs:
       options: --privileged
 
     steps:
-      - uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME  }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Start Docker Daemon
         run: |
           dockerd-entrypoint.sh &
           sleep 10
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Checkout Repository
         uses: actions/checkout@v4
 
