--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,14 +10,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+          use: true
+
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Push
+      - name: Build and Push with GHCR cache
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -25,7 +31,8 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/my-app:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          
+
+
   run-tests:
     needs: build-and-push
     runs-on: ubuntu-latest
