--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,6 +27,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: docker/Dockerfile.test
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/my-app:${{ github.sha }}
           cache-from: type=gha
