--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,5 +1,9 @@
 name: Docker Build and Test with DockerHub Caching
 
+permissions:
+  packages: write
+  contents: read
+
 on:
   push:
     branches:
